--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ android.enableJetifier=false
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Xms2g
+org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Xms1024M
