A lot of fixes, mainly for android 6-7 and AGP 9

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
 # org.gradle.parallel=true
 #Sat May 10 21:57:01 CEST 2025
-android.builtInKotlin=false
+#android.builtInKotlin=false
 android.defaults.buildfeatures.resvalues=true
 android.dependency.useConstraints=true
 android.enableAppCompileTimeRClass=false
@@ -21,8 +21,7 @@ android.nonFinalResIds=false
 android.nonTransitiveRClass=false
 android.r8.optimizedResourceShrinking=false
 android.r8.strictFullModeForKeepRules=false
-android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+#android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
 android.uniquePackageNames=false
-android.useAndroidX=true
-android.usesSdkInManifest.disallowed=false
+#android.usesSdkInManifest.disallowed=false
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Xms1024M
