--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+<!--    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />-->
 
     <uses-feature
         android:name="android.software.leanback"
