--- a/gradle.properties
+++ b/gradle.properties
@@ -12,16 +12,17 @@
 # org.gradle.parallel=true
 #Sat May 10 21:57:01 CEST 2025
 #android.builtInKotlin=false
+# Needed for app build gradle
 android.defaults.buildfeatures.resvalues=true
-android.dependency.useConstraints=true
-android.enableAppCompileTimeRClass=false
-android.enableJetifier=false
-android.newDsl=false
-android.nonFinalResIds=false
-android.nonTransitiveRClass=false
-android.r8.optimizedResourceShrinking=false
-android.r8.strictFullModeForKeepRules=false
+#android.dependency.useConstraints=true
+#android.enableAppCompileTimeRClass=false
+#android.enableJetifier=false
+#android.newDsl=false
+#android.nonFinalResIds=false
+#android.nonTransitiveRClass=false
+#android.r8.optimizedResourceShrinking=false
+#android.r8.strictFullModeForKeepRules=false
 #android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
-android.uniquePackageNames=false
+#android.uniquePackageNames=false
 #android.usesSdkInManifest.disallowed=false
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Xms1024M
